// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots My Button Basic Usage 1`] = `
.c0 {
  border-radius: 8px;
  border: none;
  background: red;
  color: white;
  padding: 1.5em;
  font-size: 18px;
}

<button
  class="c0"
>
  Trying it out
</button>
`;

exports[`Storyshots My Button Clicks 1`] = `
.c0 {
  border-radius: 8px;
  border: none;
  background: red;
  color: white;
  padding: 1.5em;
  font-size: 18px;
}

<button
  class="c0"
>
  Click Me
</button>
`;
